utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_enum_with_flatten_overrides_conflicting_status.snap
---
source: utoipa-gen/tests/response_derive_test.rs
expression: responses
---
{
  "500": {
    "content": {
      "text/plain": {
        "schema": {
          "oneOf": [
            {
              "format": "int32",
              "type": "integer"
            },
            {
              "type": "string"
            }
          ]
        }
      }
    },
    "description": ""
  }
}
