utoipa-gen/tests/snapshots/response_derive_test__derive_into_responses_enum_with_flatten_responses.snap
---
source: utoipa-gen/tests/response_derive_test.rs
expression: responses
---
{
  "403": {
    "content": {
      "text/plain": {
        "schema": {
          "type": "string"
        }
      }
    },
    "description": ""
  },
  "500": {
    "content": {
      "text/plain": {
        "schema": {
          "type": "string"
        }
      }
    },
    "description": ""
  }
}
